fix z-index issue

--- a/wish-to-go/style.css
+++ b/wish-to-go/style.css
@@ -2,6 +2,7 @@
 	position: fixed;
 	bottom: 3.5em;
 	right: 0;
+	z-index: 999999;
 }
 
 
